correct language display on mobiles

--- a/src/components/Spinner/Spinner.css
+++ b/src/components/Spinner/Spinner.css
@@ -46,11 +46,4 @@
         padding: 20rem 5rem;
         height: 100vh;
     }
-
-    .spinner_img {
-        /* border: 2rem solid rgb(214, 250, 163);
-        border-top: 2rem solid rgb(77, 22, 130); */
-        /* width: 4rem;
-        height: 4rem; */
-    }
 }
